--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe</title>
-    <link rel="stylesheet" type="text/css" href="./css/ttt.css">
+    <title>Tetris</title>
+    <link rel="stylesheet" type="text/css" href="./css/tetris.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/bundle.js"></script>
   </head>
 
   <body>
-    <h1>Tic Tac Toe</h1>
+    <div>
+      <h1>
+        <img src="./assets/title.png" alt="Tetris">
+      </h1>
 
-    <figure class="ttt"></figure>
+      <figure class="tetris-game"></figure>
+    </div>
   </body>
 </html>
