Add start game modal

--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8">
     <title>Tetris</title>
     <link rel="stylesheet" type="text/css" href="./css/tetris.css">
+    <link href="https://fonts.googleapis.com/css?family=Dhurjati" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="./js/bundle.js"></script>
   </head>
 
-  <body>
     <div>
+
       <h1>
         <img src="./assets/title.png" alt="Tetris">
       </h1>
 
       <figure class="tetris-game"></figure>
+
     </div>
   </body>
 </html>
