Add pause resume button

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <script src="./js/bundle.js"></script>
   </head>
 
-    <div>
+    <div class="entire-screen">
+      <div class="main-ctn">
+        <h1>
+          <img src="./assets/title.png" alt="Tetris">
+        </h1>
 
-      <h1>
-        <img src="./assets/title.png" alt="Tetris">
-      </h1>
+        <figure class="tetris-board">
+        </figure>
 
-      <figure class="tetris-game"></figure>
-
+      </div>
+      <button class="pause-btn"> <p class="pause-char">&#9612; &#9612;</p></button>
     </div>
+
   </body>
 </html>
