--- a/index.html
+++ b/index.html
@@ -19,8 +19,46 @@
         </figure>
 
       </div>
-      <button class="pause-btn"> <p class="pause-char">&#9612; &#9612;</p></button>
+
+      <div class="right-ctn">
+        <div class="nextPiece-ctn" style="color:white;">
+          <h1>Next</h1>
+          <ul data=0 >
+            <li empty=true data=0></li>
+            <li empty=true data=1></li>
+            <li empty=true data=2></li>
+            <li empty=true data=3></li>
+          </ul>
+          <ul data=1 >
+            <li empty=true data=0></li>
+            <li empty=true data=1></li>
+            <li empty=true data=2></li>
+            <li empty=true data=3></li>
+          </ul>
+          <ul data=2>
+            <li empty=true data=0></li>
+            <li empty=true data=1></li>
+            <li empty=true data=2></li>
+            <li empty=true data=3></li>
+          </ul>
+          <ul data=3 >
+            <li empty=true data=0></li>
+            <li empty=true data=1></li>
+            <li empty=true data=2></li>
+            <li empty=true data=3></li>
+          </ul>
+          <ul data=4 >
+            <li empty=true data=0></li>
+            <li empty=true data=1></li>
+            <li empty=true data=2></li>
+            <li empty=true data=3></li>
+          </ul>
+        </div>
+        <button class="pause-btn"> <p class="pause-char">&#9612; &#9612;</p></button>
+      <div>
+
     </div>
+
 
   </body>
 </html>
