Added style to next piece and score

--- a/index.html
+++ b/index.html
@@ -10,10 +10,31 @@
   </head>
 
     <div class="entire-screen">
+
+      <div class="left-ctn">
+        <div class="score-ctn">
+          <div>
+            <h1 class="score-title">Score</h1>
+            <h1 class="score-result">Result</h1>
+          </div>
+          <div>
+            <h1 class="score-title">Level</h1>
+            <h1 class="score-result">Result</h1>
+          </div>
+          <div>
+            <h1 class="score-title">Lines</h1>
+            <h1 class="score-result">Result</h1>
+          </div>
+        </div>
+      </div>
+
+
       <div class="main-ctn">
         <h1>
           <img src="./assets/title.png" alt="Tetris">
         </h1>
+
+
 
         <figure class="tetris-board">
         </figure>
@@ -21,7 +42,7 @@
       </div>
 
       <div class="right-ctn">
-        <div class="nextPiece-ctn" style="color:white;">
+        <div class="nextPiece-ctn">
           <h1>Next</h1>
           <ul data=0 >
             <li empty=true data=0></li>
