Added scoredboard functionality

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <div class="score-ctn">
           <div>
             <h1 class="score-title">Score</h1>
-            <h1 class="score-result">Result</h1>
+            <h1 class="score-result"></h1>
           </div>
           <div>
-            <h1 class="score-title">Level</h1>
-            <h1 class="score-result">Result</h1>
+            <h1 class="level-title">Level</h1>
+            <h1 class="level-result"></h1>
           </div>
           <div>
-            <h1 class="score-title">Lines</h1>
-            <h1 class="score-result">Result</h1>
+            <h1 class="lines-title">Lines</h1>
+            <h1 class="lines-result"></h1>
           </div>
         </div>
       </div>
