Add new level functionality

--- a/index.html
+++ b/index.html
@@ -49,30 +49,35 @@
             <li empty=true data=1></li>
             <li empty=true data=2></li>
             <li empty=true data=3></li>
+            <li empty=true data=4></li>
           </ul>
           <ul data=1 >
             <li empty=true data=0></li>
             <li empty=true data=1></li>
             <li empty=true data=2></li>
             <li empty=true data=3></li>
+            <li empty=true data=4></li>
           </ul>
           <ul data=2>
             <li empty=true data=0></li>
             <li empty=true data=1></li>
             <li empty=true data=2></li>
             <li empty=true data=3></li>
+            <li empty=true data=4></li>
           </ul>
           <ul data=3 >
             <li empty=true data=0></li>
             <li empty=true data=1></li>
             <li empty=true data=2></li>
             <li empty=true data=3></li>
+            <li empty=true data=4></li>
           </ul>
           <ul data=4 >
             <li empty=true data=0></li>
             <li empty=true data=1></li>
             <li empty=true data=2></li>
             <li empty=true data=3></li>
+            <li empty=true data=4></li>
           </ul>
         </div>
         <button class="pause-btn"> <p class="pause-char">&#9612; &#9612;</p></button>
