--- a/index.html
+++ b/index.html
@@ -9,82 +9,96 @@
     <script src="./js/bundle.js"></script>
   </head>
 
+  <body>
     <div class="entire-screen">
 
-      <div class="left-ctn">
-        <div class="score-ctn">
-          <div>
-            <h1 class="score-title">Score</h1>
-            <h1 class="score-result"></h1>
-          </div>
-          <div>
-            <h1 class="level-title">Level</h1>
-            <h1 class="level-result"></h1>
-          </div>
-          <div>
-            <h1 class="lines-title">Lines</h1>
-            <h1 class="lines-result"></h1>
+      <div class="center-ctn">
+
+        <div class="left-ctn">
+          <div class="score-ctn">
+            <div>
+              <h1 class="score-title">Score</h1>
+              <h1 class="score-result"></h1>
+            </div>
+            <div>
+              <h1 class="level-title">Level</h1>
+              <h1 class="level-result"></h1>
+            </div>
+            <div>
+              <h1 class="lines-title">Lines</h1>
+              <h1 class="lines-result"></h1>
+            </div>
           </div>
         </div>
-      </div>
 
 
-      <div class="main-ctn">
-        <h1>
-          <img src="./assets/title.png" alt="Tetris">
-        </h1>
+        <div class="main-ctn">
+          <h1>
+            <img class="tetris-title" src="./assets/title.png" alt="Tetris">
+          </h1>
 
 
 
-        <figure class="tetris-board">
-        </figure>
+          <figure class="tetris-board">
+          </figure>
 
-      </div>
-
-      <div class="right-ctn">
-        <div class="nextPiece-ctn">
-          <h1>Next</h1>
-          <ul data=0 >
-            <li empty=true data=0></li>
-            <li empty=true data=1></li>
-            <li empty=true data=2></li>
-            <li empty=true data=3></li>
-            <li empty=true data=4></li>
-          </ul>
-          <ul data=1 >
-            <li empty=true data=0></li>
-            <li empty=true data=1></li>
-            <li empty=true data=2></li>
-            <li empty=true data=3></li>
-            <li empty=true data=4></li>
-          </ul>
-          <ul data=2>
-            <li empty=true data=0></li>
-            <li empty=true data=1></li>
-            <li empty=true data=2></li>
-            <li empty=true data=3></li>
-            <li empty=true data=4></li>
-          </ul>
-          <ul data=3 >
-            <li empty=true data=0></li>
-            <li empty=true data=1></li>
-            <li empty=true data=2></li>
-            <li empty=true data=3></li>
-            <li empty=true data=4></li>
-          </ul>
-          <ul data=4 >
-            <li empty=true data=0></li>
-            <li empty=true data=1></li>
-            <li empty=true data=2></li>
-            <li empty=true data=3></li>
-            <li empty=true data=4></li>
-          </ul>
         </div>
-        <button class="pause-btn"> <p class="pause-char">&#9612; &#9612;</p></button>
-      <div>
+
+        <div class="right-ctn">
+          <div class="nextPiece-ctn">
+            <h1>Next</h1>
+            <ul data=0 >
+              <li empty=true data=0></li>
+              <li empty=true data=1></li>
+              <li empty=true data=2></li>
+              <li empty=true data=3></li>
+              <li empty=true data=4></li>
+            </ul>
+            <ul data=1 >
+              <li empty=true data=0></li>
+              <li empty=true data=1></li>
+              <li empty=true data=2></li>
+              <li empty=true data=3></li>
+              <li empty=true data=4></li>
+            </ul>
+            <ul data=2>
+              <li empty=true data=0></li>
+              <li empty=true data=1></li>
+              <li empty=true data=2></li>
+              <li empty=true data=3></li>
+              <li empty=true data=4></li>
+            </ul>
+            <ul data=3 >
+              <li empty=true data=0></li>
+              <li empty=true data=1></li>
+              <li empty=true data=2></li>
+              <li empty=true data=3></li>
+              <li empty=true data=4></li>
+            </ul>
+            <ul data=4 >
+              <li empty=true data=0></li>
+              <li empty=true data=1></li>
+              <li empty=true data=2></li>
+              <li empty=true data=3></li>
+              <li empty=true data=4></li>
+            </ul>
+          </div>
+          <button class="pause-btn"> <p class="pause-char">&#9612; &#9612;</p></button>
+        </div>
+
+      </div>
+
+      <div class="footer">
+        <h3>Made by Sam Cross</h3>
+        <ul>
+          <li class="logo" title="LinkedIn"><a href="https://www.linkedin.com/in/sam-cross" target="_blank"><img src="assets/linkedin.png" alt="LinkedIn"></a><p class="title1">LinkedIn</p></li>
+          <li class="logo" title="Github"><a href="https://github.com/guitar71989" target="_blank"><img src="assets/github.png" alt="Github"></a><p class="title2">Github</p></li>
+          <li class="logo" title="Github"><a href="https://guitar71989.github.io/" target="_blank"><img src="assets/portfolio.png" alt="Portfolio"></a><p class="title3">Portfolio</p></li>
+        </ul>
+
+      </div>
 
     </div>
-
 
   </body>
 </html>
