Add game over modal

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+<!-- 
+    <div id="overlay">
+    </div>
+
+    <div id="modal">
+    </div> -->
+
     <div class="entire-screen">
 
       <div class="center-ctn">
