Add favicon optimize piece speed with log function

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tetris</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/tetris.css">
     <link href="https://fonts.googleapis.com/css?family=Dhurjati" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -10,7 +11,7 @@
   </head>
 
   <body>
-<!-- 
+<!--
     <div id="overlay">
     </div>
 
