--- a/index.html
+++ b/index.html
@@ -2,23 +2,60 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tetris</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <link rel="stylesheet" type="text/css" href="./css/tetris.css">
     <link href="https://fonts.googleapis.com/css?family=Dhurjati" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="./js/bundle.js"></script>
+    <script src="lib/bundle.js" charset="utf-8"></script>
+    <title>Tetris</title>
   </head>
-
   <body>
-<!--
+    <h1>Tetris</h1>
+    <h5> Game by: Sam Cross </h5>
+
+    <div id="gameoveroverlay">
+    </div>
+
+    <div id="gameovermodal">
+      <div id="graphic">
+        <img width="100%"  height="100%" src="./assets/gameover.gif" controls="controls">
+        </img>
+        <button id="playagain" href="#">Click here to play again</a>
+      </div>
+    </div>
+
     <div id="overlay">
     </div>
 
     <div id="modal">
-    </div> -->
+      <button id="play">Play
+      </button>
 
-    <div class="entire-screen">
+      <div id="instructions">
+        <h1 id="instructions-title">Instructions</h1>
+
+        <div class="key-instruction-ctn">
+          <p class="arrow up">&#x2B05</p>
+          <p class="rotatetext">Rotate</p>
+        </div>
+
+        <div class="key-instruction-ctn">
+          <p class="arrow right">&#x2B05</p>
+          <p right-text>Move Right</p>
+        </div>
+
+        <div class="key-instruction-ctn">
+          <p class="arrow down">&#x2B05</p>
+          <p down-text>Move Down</p>
+        </div>
+
+        <div class="key-instruction-ctn">
+          <p class="arrow left">&#x2B05</p>
+          <p left-text>Move Left</p>
+        </div>
+      </div>
+    </div>
+
+      <div class="entire-screen">
 
       <div class="center-ctn">
 
@@ -107,6 +144,7 @@
       </div>
 
     </div>
+
 
   </body>
 </html>
