Add hold piece feature

--- a/index.html
+++ b/index.html
@@ -60,6 +60,44 @@
       <div class="center-ctn">
 
         <div class="left-ctn">
+          <div class="holdPiece-ctn">
+              <h1>Hold</h1>
+              <ul data=0 >
+                <li empty=true data=0></li>
+                <li empty=true data=1></li>
+                <li empty=true data=2></li>
+                <li empty=true data=3></li>
+                <li empty=true data=4></li>
+              </ul>
+              <ul data=1 >
+                <li empty=true data=0></li>
+                <li empty=true data=1></li>
+                <li empty=true data=2></li>
+                <li empty=true data=3></li>
+                <li empty=true data=4></li>
+              </ul>
+              <ul data=2>
+                <li empty=true data=0></li>
+                <li empty=true data=1></li>
+                <li empty=true data=2></li>
+                <li empty=true data=3></li>
+                <li empty=true data=4></li>
+              </ul>
+              <ul data=3 >
+                <li empty=true data=0></li>
+                <li empty=true data=1></li>
+                <li empty=true data=2></li>
+                <li empty=true data=3></li>
+                <li empty=true data=4></li>
+              </ul>
+              <ul data=4 >
+                <li empty=true data=0></li>
+                <li empty=true data=1></li>
+                <li empty=true data=2></li>
+                <li empty=true data=3></li>
+                <li empty=true data=4></li>
+              </ul>
+            </div>
           <div class="score-ctn">
             <div>
               <h1 class="score-title">Score</h1>
