Add hold in instructions

--- a/index.html
+++ b/index.html
@@ -35,22 +35,27 @@
 
         <div class="key-instruction-ctn">
           <p class="arrow up">&#x2B05</p>
-          <p class="rotatetext">Rotate</p>
+          <p class="key-text">Rotate</p>
         </div>
 
         <div class="key-instruction-ctn">
           <p class="arrow right">&#x2B05</p>
-          <p right-text>Move Right</p>
+          <p class="key-text">Move Right</p>
         </div>
 
         <div class="key-instruction-ctn">
           <p class="arrow down">&#x2B05</p>
-          <p down-text>Move Down</p>
+          <p class="key-text">Move Down</p>
         </div>
 
         <div class="key-instruction-ctn">
           <p class="arrow left">&#x2B05</p>
-          <p left-text>Move Left</p>
+          <p class="key-text">Move Left</p>
+        </div>
+
+        <div class="key-instruction-ctn">
+          <p class="arrow hold">c</p>
+          <p class="key-text">Hold</p>
         </div>
       </div>
     </div>
