Fix directions size

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div id="gameoveroverlay">
     </div>
 
+
     <div id="gameovermodal">
       <div id="graphic">
         <img width="100%"  height="100%" src="./assets/gameover.gif" controls="controls">
@@ -23,11 +24,9 @@
       </div>
     </div>
 
-    <div id="overlay">
-    </div>
 
     <div id="modal">
-      <button id="play">Play
+      <button id="play"><p>Play</p>
       </button>
 
       <div id="instructions">
